--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -18,3 +18,7 @@ jobs:
         run: npm install
       - name: Check style
         run: npm run eslint
+      - name: Build the application
+        run: npm run build
+      - name: Test the application
+        run: npm run test
