--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -1,28 +1,3 @@
-# name: Deployment pipeline
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-
-#   simple_deployment_pipeline:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v6
-#       - uses: actions/setup-node@v6
-#         with:
-#           node-version: '22'
-# deploy:
-#   runs-on: ubuntu-latest
-#   steps:
-#     - uses: JorgeLNJunior/render-deploy@v1.4.7
-#       with:
-#         service_id: ${{ secrets.RENDER_SERVICE_ID }}
-#         api_key: ${{ secrets.RENDER_API_KEY }}
-
-
 name: Deployment pipeline
 
 on:
@@ -33,13 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      deployments: write
     steps:
-      - uses: JorgeLNJunior/render-deploy@v1.4.7
-        with:
-          service_id: ${{ secrets.RENDER_SERVICE_ID }}
-          api_key: ${{ secrets.RENDER_API_KEY }}
-          github_deployment: true
-          deployment_environment: 'production'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Trigger Render Deploy
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
