--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   "jest": {
     "testEnvironment": "jsdom",
     "testPathIgnorePatterns": [
-      "e2e-tests"
+      "e2e-tests",
+      "e2e"
     ]
   }
 }
